SF Primes/src/objects/Solution__c.object
<CustomObject>
    <description>Contains the categorization of Solutions under each Dealership Need.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealership_Need_Name__c</fullName>
        <formula>Question_Category__r.Name</formula>
        <label>Dealership Need Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_of_Questions__c</fullName>
        <label>Number of Questions</label>
        <summarizedField>Product__c.Number_of_Questions__c</summarizedField>
        <summaryForeignKey>Product__c.Solution__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Question_Category__c</fullName>
        <label>Dealership Need</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Dealership Need is not active.</errorMessage>
            <filterItems>
                <field>Question_Category__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Question_Category__c</referenceTo>
        <relationshipLabel>Solutions</relationshipLabel>
        <relationshipName>Solutions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Solution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Question_Category__c</columns>
        <columns>Active__c</columns>
        <columns>Number_of_Questions__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Solution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>